--- a/nba-api/nba-back/package.json
+++ b/nba-api/nba-back/package.json
@@ -12,12 +12,7 @@
   "author": "Valentin Drelon",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "globals": "^15.6.0",
-    "nodemon": "^3.1.0",
-    "prettier": "3.3.2"
+    "nodemon": "^3.1.0"
   },
   "dependencies": {
     "axios": "^1.6.8",
